--- a/tests/test-jquery-1.8.html
+++ b/tests/test-jquery-1.8.html
@@ -14,15 +14,15 @@
 				services : {
 					facebook : {
 						'status': 'on',
-						'dummy_img': '../download/socialshareprivacy/images/dummy_facebook.png',
+						'dummy_img': '../download/socialshareprivacy/images/dummy_facebook.png'
 					}, 
 					twitter : {
 						'status': 'on',
-						'dummy_img': '../download/socialshareprivacy/images/dummy_twitter.png',
+						'dummy_img': '../download/socialshareprivacy/images/dummy_twitter.png'
 					},
 					gplus : {
 						'status': 'on',
-						'dummy_img': '../download/socialshareprivacy/images/dummy_gplus.png',
+						'dummy_img': '../download/socialshareprivacy/images/dummy_gplus.png'
 					}
 				}
 			});
