Add missing string end

--- a/tests/test-jquery-1.9.html
+++ b/tests/test-jquery-1.9.html
@@ -14,7 +14,7 @@
 				services : {
 					facebook : {
 						'status': 'on',
-						'dummy_img': '../download/socialshareprivacy/images/dummy_facebook.png
+						'dummy_img': '../download/socialshareprivacy/images/dummy_facebook.png'
 					}, 
 					twitter : {
 						'status': 'on',
