--- a/tests/test-jquery-1.10.html
+++ b/tests/test-jquery-1.10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Test socialshareprivacy-community using jQuery 1.10</title>
     <script src="jquery-1.10.1.min.js"></script>
-	<script src="../jquery.socialshareprivacy.js"></script>
+	<script src="../download/jquery.socialshareprivacy.js"></script>
 	<script type="text/javascript">
 	jQuery(document).ready(function($){
 		if($('#socialshareprivacy').length > 0){
