--- a/tests/test-jquery-1.8.html
+++ b/tests/test-jquery-1.8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Test socialshareprivacy-community using jQuery 1.8</title>
     <script src="jquery-1.8.3.min.js"></script>
-	<script src="../jquery.socialshareprivacy.js"></script>
+	<script src="../download/jquery.socialshareprivacy.js"></script>
 	<script type="text/javascript">
 	jQuery(document).ready(function($){
 		if($('#socialshareprivacy').length > 0){
