--- a/tests/test-jquery-1.9.html
+++ b/tests/test-jquery-1.9.html
@@ -9,7 +9,7 @@
 	jQuery(document).ready(function($){
 		if($('#socialshareprivacy').length > 0){
 			$('#socialshareprivacy').socialSharePrivacy({
-				uri : 'http://www.heise.de/',
+				uri : 'http://kullo.de/',
 				'css_path' : '../download/socialshareprivacy/socialshareprivacy.css',
 				services : {
 					facebook : {
