--- a/tests/index.html
+++ b/tests/index.html
@@ -8,11 +8,36 @@
     <h1>Test suite</h1>
     <h2>for socialshareprivacy-community</h2>
 
-	<ul>
-		<li><a href="test-jquery-1.7.html">using jQuery 1.7</a></li>
-		<li><a href="test-jquery-1.8.html">using jQuery 1.8</a></li>
-		<li><a href="test-jquery-1.9.html">using jQuery 1.9</a></li>
-		<li><a href="test-jquery-1.10.html">using jQuery 1.10</a></li>
-	</ul>
+	<table border="1" cellpadding="10">
+		<tr>
+			<th>jQuery<br />Version</th>
+			<th>German<br />(default)</th>
+			<th>English</th>
+		</tr>
+		<tr>
+			<td>1.7</td>
+			<td><a href="test-jquery-1.7.html">1.7 (de)</a></td>
+			<td><a href="test-jquery-1.7-en.html">1.7 (en)</a></td>
+		</tr>
+		<tr>
+			<td>1.8</td>
+			<td><a href="test-jquery-1.8.html">1.8 (de)</a></td>
+			<td><a href="test-jquery-1.8-en.html">1.8 (en)</a></td>
+		</tr>
+		<tr>
+			<td>1.9</td>
+			<td><a href="test-jquery-1.9.html">1.9 (de)</a></td>
+			<td><a href="test-jquery-1.9-en.html">1.9 (en)</a></td>
+		</tr>
+		<tr>
+			<td>1.10</td>
+			<td><a href="test-jquery-1.10.html">1.10 (de)</a></td>
+			<td><a href="test-jquery-1.10-en.html">1.10 (en)</a></td>
+		</tr>
+	</table>
+
+	<hr />
+	<p>Fork me on Github:
+		<a href="https://github.com/webmaster128/socialshareprivacy-community">https://github.com/webmaster128/socialshareprivacy-community</a>.</p>
 </body>
 </html>
