Add jQuery 2.0 tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -34,6 +34,11 @@
 			<td><a href="test-jquery-1.10.html">1.10 (de)</a></td>
 			<td><a href="test-jquery-1.10-en.html">1.10 (en)</a></td>
 		</tr>
+		<tr>
+			<td>2.0</td>
+			<td><a href="test-jquery-2.0.html">2.0 (de)</a></td>
+			<td><a href="test-jquery-2.0-en.html">2.0 (en)</a></td>
+		</tr>
 	</table>
 
 	<hr />
